tests/baselines/reference/parserUsingConstructorAsIdentifier.errors.txt
parserUsingConstructorAsIdentifier.ts(3,13): error TS2304: Cannot find name 'PluginUtilities'.
parserUsingConstructorAsIdentifier.ts(5,17): error TS2304: Cannot find name 'initializeProperties'.
parserUsingConstructorAsIdentifier.ts(8,17): error TS2304: Cannot find name 'initializeProperties'.
parserUsingConstructorAsIdentifier.ts(18,17): error TS2304: Cannot find name 'PluginUtilities'.
parserUsingConstructorAsIdentifier.ts(21,21): error TS2304: Cannot find name 'initializeProperties'.
parserUsingConstructorAsIdentifier.ts(24,21): error TS2304: Cannot find name 'initializeProperties'.
parserUsingConstructorAsIdentifier.ts(36,17): error TS2304: Cannot find name 'initializeProperties'.


==== parserUsingConstructorAsIdentifier.ts (7 errors) ====
            function define(constructor, instanceMembers, staticMembers) {
                constructor = constructor || function () { };
                PluginUtilities.Utilities.markSupportedForProcessing(constructor);
                ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PluginUtilities'.
                if (instanceMembers) {
                    initializeProperties(constructor.prototype, instanceMembers);
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'initializeProperties'.
                }
                if (staticMembers) {
                    initializeProperties(constructor, staticMembers);
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'initializeProperties'.
                }
                return constructor;
            }
    
            function derive(baseClass, constructor, instanceMembers, staticMembers) {
                if (baseClass) {
                    constructor = constructor || function () { };
                    var basePrototype = baseClass.prototype;
                    constructor.prototype = Object.create(basePrototype);
                    PluginUtilities.Utilities.markSupportedForProcessing(constructor);
                    ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'PluginUtilities'.
                    Object.defineProperty(constructor.prototype, "constructor", { value: constructor, writable: true, configurable: true, enumerable: true });
                    if (instanceMembers) {
                        initializeProperties(constructor.prototype, instanceMembers);
                        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'initializeProperties'.
                    }
                    if (staticMembers) {
                        initializeProperties(constructor, staticMembers);
                        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'initializeProperties'.
                    }
                    return constructor;
                } else {
                    return define(constructor, instanceMembers, staticMembers);
                }
            }
    
            function mix(constructor) {
                constructor = constructor || function () { };
                var i, len;
                for (i = 1, len = arguments.length; i < len; i++) {
                    initializeProperties(constructor.prototype, arguments[i]);
                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'initializeProperties'.
                }
                return constructor;
            }